<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bluetooth</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="on">Turn On</string>
    <string name="List">List paired Devices</string>
    <string name="Find">Search new Devices</string>
    <string name="Text">Status: -</string>
    <string name="visible">Visible</string>

</resources>